<resources>
    <string name="app_name">OLK</string>
    <string name="x">X-</string>
    <string name="y">Y+</string>
    <string name="ym">Y-</string>
    <string name="zm">Z-</string>
    <string name="jointStr">Джоинты</string>
    <string name="dekartTring">Декарт</string>
    <string name="sendBtn">Отправить</string>
    <string name="pirates">Декарт</string>
    <string name="ninjas">Джоинты</string>
    <string name="connect">Подключиться</string>
    <string name="cleare">Очистить</string>
    <string name="addr">адрес</string>
    <string name="port">Порт</string>
    <string name="ip_address">192.168.0.57</string>
    <string name="_port">30000</string>
    <string name="home1">Home1</string>
    <string name="home2">Home2</string>
    <string name="startservice">StartService</string>
    <string name="setAngles">Задать углы</string>
    <string name="inPoint">В точку</string>
    <string name="otnTurn">Относительный поворот</string>
    <string name="InPoint2">В точку</string>
    <string name="home21">Home2</string>
    <string name="home">Home</string>
    <string name="_0">0</string>
    <string name="j1">j1</string>
    <string name="j6">j6</string>
    <string name="j5">j5</string>
    <string name="j4">j4</string>
    <string name="j3">j3</string>
    <string name="j2">j2</string>
    <string name="j10">j1</string>
</resources>
